[package]
name = "rs-async-raft-memstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-raft = "0.6.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.43.1", default-features=false, features = ["sync"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
