[package]
name = "rs-hands-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
linfa = { version = "0.7", features = ["serde"] }
linfa-datasets = { version = "0.7", features = ["diabetes"] }
linfa-linear = { version = "0.7", features = ["serde"] }
ndarray = { version = "0.15.6", features = ["serde", "rayon"] }
ndarray-linalg = "0.16.0"
