[package]
name = "rs-hands-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
linfa = { version = "0.7", features = ["serde"] }
linfa-linear = { version = "0.7", features = ["serde"] }
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
polars = { version = "0.36", features = ["ndarray", "decompress"] }
