[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
