[package]
name = "rs-riteraft-actix-memstore"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
async-trait = "0.1.83"
bincode = "1.3.3"
clap = { version = "4.5.18", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
riteraft = "0.1.0"
serde = { version = "1.0.210", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
slog-scope = "4.4"
tokio = { version = "1.40.0", features = ["full"] }
