name:                intro
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/whatot/base/lhaskell/intro#readme
license:             BSD3
license-file:        LICENSE
author:              whatot
maintainer:          whatot2@gmail.com
copyright:           whatot
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable intro
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
