[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "with-chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
