[package]
name = "shelter_main"
version = "0.1.0"
edition = "2024"
description = "Dog Shelter: A sample application to experiment with Rust-based microservices"

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
anyhow = "1"
clap = { version = "4", default-features = true, features = ["cargo"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.15"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower = "0.5.3"
tower-http = { version = "0.7", features = ["trace"] }
arc-swap = "1.9.1"
sea-orm = { version = "1.1", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
argon2 = "0.5"
jsonwebtoken = "10.4"
chrono = "0.4"
