[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"
description = "Dog Shelter: A sample application to experiment with Rust-based microservices"

[dependencies]
migration = { path = "../migration" }
entity = { path = "../entity" }
anyhow = "1"
clap = { version = "4", default-features = true, features = ["cargo"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.13"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["trace"] }
arc-swap = "1.6.0"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
password-hash = "0.5"
argon2 = "0.5"
jsonwebtoken = "9.2"
chrono = "0.4"
