[package]
name = "blog-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.52", features = ["macros", "net", "rt-multi-thread"]}
axum = "0.8"
askama = "0.16"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "time"] }
tower-http = {version = "0.7", features=["full"]}
